test/valid/test2.sl
integer a;
a := (3 + 5) * 2 - 10 / 2;
print(a);