test/invalid/test3.sl
print(5 + 3; // Error: Missing closing ')'.